# ffmpeg

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wzf/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wzf/ffmpeg/: MainActivity.java  Utils.java  VideoPlayActivity.java  VideoUtils.java  VideoView.java
app/src/main/jni/: Android.mk  android_log.h  libwzf.c  player.c  queue.c  vidoe_utils.h  wzf.c
app/src/main/jni/header/: com_wzf_ffmpeg_VideoUtils.h  queue.h  音视频基础知识
app/src/main/jni/header/include/libavcodec/: avcodec.h  old_codec_ids.h
app/src/main/jni/header/include/libavutil/: avutil.h  old_pix_fmts.h
app/src/main/res/layout/: activity_main.xml  activity_video_play.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/test/java/com/wzf/ffmpeg/: ExampleUnitTest.java
